exports[`action creator tests creates a "SAVE_STUDENT" action 1`] = `
Object {
  "student": Object {
    "dob": "03-29-2002",
    "height": 15,
    "id": 1,
    "name": "John Doe",
    "weight": null,
  },
  "type": "SAVE_STUDENT",
}
`;

exports[`action creator tests creates a "SAVE_STUDENT_FAILURE" action 1`] = `
Object {
  "student": Object {
    "dob": "01-01-1900",
    "height": "tall",
    "id": 4,
    "living": false,
    "name": "Grim Reaper",
    "weight": null,
  },
  "type": "SAVE_STUDENT",
}
`;

exports[`action creator tests creates a "SAVE_STUDENT_SUCCESS" action 1`] = `
Object {
  "student": Object {
    "dob": "03-29-2002",
    "height": 15,
    "id": 1,
    "name": "John Doe",
    "weight": null,
  },
  "type": "SAVE_STUDENT",
}
`;

exports[`action creator tests creates a "START_BMI_COLLECTION" action 1`] = `
Object {
  "students": Array [
    Object {
      "dob": "03-29-2002",
      "height": 15,
      "id": 1,
      "name": "John Doe",
      "weight": null,
    },
    Object {
      "dob": "08-12-1996",
      "height": 10,
      "id": 2,
      "name": "Jeremy Parker",
      "weight": 50,
    },
    Object {
      "dob": "02-05-1997",
      "height": null,
      "id": 3,
      "name": "Sally Smith",
      "weight": null,
    },
  ],
  "type": "START_BMI_COLLECTION",
}
`;

exports[`action creator tests creates an "END_BMI_COLLECTION" action 1`] = `
Object {
  "students": Array [
    Object {
      "dob": "03-29-2002",
      "height": 15,
      "id": 1,
      "name": "John Doe",
      "weight": null,
    },
    Object {
      "dob": "08-12-1996",
      "height": 10,
      "id": 2,
      "name": "Jeremy Parker",
      "weight": 50,
    },
    Object {
      "dob": "02-05-1997",
      "height": null,
      "id": 3,
      "name": "Sally Smith",
      "weight": null,
    },
  ],
  "type": "END_BMI_COLLECTION",
}
`;

exports[`component tests renders "Save" button correctly 1`] = `
<button
  className="next-student">
  Save
</button>
`;

exports[`component tests renders "Stop" button correctly 1`] = `
<button
  className="stop-collection">
  Stop
</button>
`;

exports[`component tests renders the student1 detail view correctly 1`] = `
<div
  className="bmi-collection-student-detail">
  <span>
    1
  </span>
  <span>
    John Doe
  </span>
  <span>
    03-29-2002
  </span>
  <span>
    15
  </span>
  <span />
</div>
`;

exports[`reducer tests does not start BMI collection because height and weight data has already been collected for all students 1`] = `
Object {
  "currentStudent": "",
  "students": Array [],
}
`;

exports[`reducer tests does not start BMI collection because there are no students created for this program 1`] = `
Object {
  "currentStudent": "",
  "students": Array [],
}
`;

exports[`reducer tests ends BMI collection 1`] = `
Object {
  "currentStudent": "",
  "students": Array [],
}
`;

exports[`reducer tests fails to save the student data 1`] = `
Array [
  Object {
    "dob": "03-29-2002",
    "height": 15,
    "id": 1,
    "name": "John Doe",
    "weight": null,
  },
  Object {
    "dob": "02-05-1997",
    "height": null,
    "id": 3,
    "name": "Sally Smith",
    "weight": null,
  },
]
`;

exports[`reducer tests makes a request to save the data entered for a student 1`] = `
Array [
  Object {
    "dob": "03-29-2002",
    "height": 15,
    "id": 1,
    "name": "John Doe",
    "weight": null,
  },
  Object {
    "dob": "02-05-1997",
    "height": null,
    "id": 3,
    "name": "Sally Smith",
    "weight": null,
  },
]
`;

exports[`reducer tests returns the same state on an unhandled action 1`] = `
Object {
  "currentStudent": "",
  "students": Array [],
}
`;

exports[`reducer tests saves the student data successfully 1`] = `
Array [
  Object {
    "dob": "03-29-2002",
    "height": 15,
    "id": 1,
    "name": "John Doe",
    "weight": null,
  },
  Object {
    "dob": "02-05-1997",
    "height": null,
    "id": 3,
    "name": "Sally Smith",
    "weight": null,
  },
]
`;

exports[`reducer tests starts BMI collection 1`] = `
Object {
  "currentStudent": "",
  "students": Array [],
}
`;

exports[`reducer tests starts BMI collection with a filtered list 1`] = `
Object {
  "currentStudent": "",
  "students": Array [],
}
`;
